Restored Pre-Harmony Bubble title margin metrics

Added INSETS_BUBBLE_TITLE metric to distinguish from INSETS_DIALOG_TITLE

BUG=711012
BUG=705907

Review-Url: https://codereview.chromium.org/2819633002
Cr-Commit-Position: refs/heads/master@{#465635}

Former-commit-id: 5d0f09e42f23950e3937e36e5bdc3a384f732330